[gd_scene load_steps=3 format=3 uid="uid://dk6ps468q2o3x"]

[ext_resource type="Script" uid="uid://d378o2dat3fn4" path="res://src/scripts/harvestable_base.gd" id="1_u76sd"]
[ext_resource type="PackedScene" uid="uid://c2igyp8fdxcft" path="res://src/scenes/composables/grid_vector_to_position_converter.tscn" id="2_pmh5g"]

[node name="HarvestableBase" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_u76sd")

[node name="Visuals" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Visuals"]
region_rect = Rect2(0, 0, 256, 64)

[node name="MiningRange" type="Area2D" parent="."]

[node name="ClickDetection" type="Area2D" parent="."]

[node name="PlayerCollider" type="StaticBody2D" parent="."]

[node name="GridVectorToPositionConverter" parent="." instance=ExtResource("2_pmh5g")]

[connection signal="body_entered" from="MiningRange" to="." method="_on_mining_range_body_entered"]
[connection signal="body_exited" from="MiningRange" to="." method="_on_mining_range_body_exited"]
[connection signal="input_event" from="ClickDetection" to="." method="_on_click_detection_input_event"]
